trunk/Archive2/6e/79bb0067acecda/output
main.cpp: In function 'int main()':
main.cpp:8:14: error: declaration of 'j' as array of references
     int& j[10];
              ^
