trunk/Archive2/6e/79bb0067acecda/main.cpp
#include <vector>

using namespace std;

int main()
{
    //vector<int&> i;
    int& j[10];
}